--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       color: black;
       border-radius: 20px;
       font-weight: bold;
-      cursor: pointer;
+      /*cursor: pointer;*/
       height: 32px;
       width: 122px;
       padding-right: 40px; /* 버튼 공간 */
