--- a/index.html
+++ b/index.html
@@ -970,15 +970,15 @@ width: 100vw !important;
     let globalVolume = 0.5; // 기본 볼륨
 
     const soundFiles = {
-        forest: 'sounds/forest.mp3',
-        bird: 'sounds/bird.mp3',
-        ocean: 'sounds/ocean.mp3',
-        fallen_leaves: 'sounds/fallen_leaves.mp3',
-        rain: 'sounds/rain.mp3',
-        snow: 'sounds/snow.mp3',
-        bonfire: 'sounds/bonfire.mp3',
-        restanrant: 'sounds/restanrant.mp3',
-        cafe: 'sounds/cafe.mp3'
+        forest: 'forest.mp3',
+        bird: 'bird.mp3',
+        ocean: 'ocean.mp3',
+        fallen_leaves: 'fallen_leaves.mp3',
+        rain: 'rain.mp3',
+        snow: 'snow.mp3',
+        bonfire: 'bonfire.mp3',
+        restanrant: 'restanrant.mp3',
+        cafe: 'cafe.mp3'
     };
 
     function playSound(soundType) {
