--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ width: 100vw !important;
       position: relative; /* hover 감지를 위해 */
     }
 
-    canvas { background: #000; }
+    canvas { background: transparent; }
 
     /* CSS 배경 클래스들 */
     .box1 { background-image: linear-gradient(360deg, rgba(218, 230, 237, 1) 0%, rgba(233, 195, 178, 1) 20%, rgba(159, 166, 199, 1) 73%, rgba(146, 152, 184, 1) 100%); }
