--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ width: 100vw !important;
     .project-info {
       display: none;
       position: fixed;
-      top: 20px;
+      top: 180px;
       left: 50%;
       transform: translateX(55px); 
       z-index: 100;
@@ -282,8 +282,9 @@ width: 100vw !important;
       animation: fadeIn 0.3s forwards;
     }
 
-    .info1 { padding: 0px; margin: 5px; color: black; font-size: 12px; font-weight: bold; }
-    .info { padding: 0px; margin: 5px; color: #828282; font-size: 12px; }
+    .info0 { padding: Opx; margin: 5px; color: black; font-size: 12px; font-weight: bold; line-height: 1.7; } 
+    .info1 { padding: Opx; margin: 5px; color: black; font-size: 12px; font-weight: normal; line-height: 1.7; }
+.info1 { padding: Opx; margin: 5px; color: #828282; font-size: 10px;}
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateX(55px) translateY(-10px); }
@@ -341,13 +342,12 @@ width: 100vw !important;
     </header>
 
     <div class="project-info" id="projectInfo">
-      <div class="project-info-content">
-        <p class="info1">디지털 골콩드 (Digital Golconda)</p>
-        <p class="info">임이지(총괄), 유정민(아트), 배시율(통합), 이지윤(UI/UX)</p>
-        <p class="info">디지털 디자인 / 2025.12.01 ~ 2025.12.08</p>
-      </div>
-    </div>
-    
+  <div class="project-info-content">
+<p class="info0">디지털 골콩드 (Digital Golconda)</p> 
+<p class="info1">르네 마그리트의 <골콩드>를 재해석하여, 중절모 신사 대신 시간과 계절을 상징하는 오브젝트가 비처럼 내리는 웹사이트입니다. 사용자의 현재 시각과 계절에 반응하는 인터랙티브 패턴과 백색소음을 통해 시각적 즐거움과 심리적 안정을 동시에 제공합니다.</p>
+  <p class="info">임이지(총괄), 유정민(아트), 배시율(통합), 이지윤(UI/UX) </p>
+<p class="info">디지털 디자인 / 2025.12.01 ~ 2025.12.08</p></div>
+<div>    
     <div class="fullscreen-info" id="fullscreenInfo">
       <div class="fullscreen-time" id="fullscreenTime"></div>
     </div>
