--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ top: -2.2px;
       position: fixed;
       bottom: 20px;
       right: 20px;
-      z-index: 10000;
+      z-index: 100;
       background-color: rgba(255, 255, 255, 0.85);
       padding: 10px 30px 14px 30px;
       border-radius: 25px;
@@ -341,16 +341,17 @@ width: 100vw !important;
       </div>
     </header>
 
-    <div class="project-info" id="projectInfo">
-  <div class="project-info-content">
-<p class="info0">디지털 골콩드 (Digital Golconda)</p> 
-<p class="info1">르네 마그리트의 <골콩드>를 재해석하여, 중절모 신사 대신 시간과 계절을 상징하는 오브젝트가 비처럼 내리는 웹사이트입니다. 사용자의 현재 시각과 계절에 반응하는 인터랙티브 패턴과 백색소음을 통해 시각적 즐거움과 심리적 안정을 동시에 제공합니다.</p>
-  <p class="info">임이지(총괄), 유정민(아트), 배시율(통합), 이지윤(UI/UX) </p>
-<p class="info">디지털 디자인 / 2025.12.01 ~ 2025.12.08</p></div>
-<div>    
-    <div class="fullscreen-info" id="fullscreenInfo">
+   <div class="project-info" id="projectInfo">
+      <div class="project-info-content">
+        <p class="info0">디지털 골콩드 (Digital Golconda)</p> 
+        <p class="info1">르네 마그리트의 <골콩드>를 재해석하여, 중절모 신사 대신 시간과 계절을 상징하는 오브젝트가 비처럼 내리는 웹사이트입니다. 사용자의 현재 시각과 계절에 반응하는 인터랙티브 패턴과 백색소음을 통해 시각적 즐거움과 심리적 안정을 동시에 제공합니다.</p>
+        <p class="info">임이지(총괄), 유정민(아트), 배시율(통합), 이지윤(UI/UX) </p>
+        <p class="info">디지털 디자인 / 2025.12.01 ~ 2025.12.08</p>
+      </div>
+    </div> <div class="fullscreen-info" id="fullscreenInfo">
       <div class="fullscreen-time" id="fullscreenTime"></div>
     </div>
+    
   </div>
 
 <script>
